feat: add friends, light profile and refactor profiles dtos
