# apps/backend/src/friends/dto/response-friends.dto.ts
@@ -1,0 +1,3 @@
+import { ProfileDto } from 'src/profiles/dtos/profile.dto'
+
+export class ResponseFriendsDto extends ProfileDto {}
